--- a/jeu/style.css
+++ b/jeu/style.css
@@ -174,3 +174,9 @@ margin-top: 0;
 font-size: 1em;
 font-family: 'Press Start 2P', cursive;
 }
+
+@media screen and (max-width: 800px){
+    ul li:nth-child(7){
+        display: none;
+    }
+}
